--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
