--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.7.0",
     "cookie-session": "^2.0.0",
+    "date-fns": "^2.28.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "passport": "^0.4.1",
